// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AC-2: Claude Code adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "claude",
    "-p",
    "--model",
    "claude-sonnet-5",
    "--permission-mode",
    "bypassPermissions",
    "--no-session-persistence",
    "--output-format",
    "stream-json",
    "--verbose",
  ],
  "env": {},
  "output": "claude-stream-json",
  "stdin": "/tmp/p.md",
}
`;

exports[`AC-2: MCode adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "mcode",
    "exec",
    "--model",
    "minimax/MiniMax-M3",
    "--cwd",
    "/work/repo",
    "--permission",
    "full",
    "--input",
    "-",
  ],
  "env": {},
  "stdin": "/tmp/p.md",
}
`;

exports[`AC-3: Codex adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "codex",
    "exec",
    "--model",
    "gpt-5.6-luna",
    "--cd",
    "/work/repo",
    "--dangerously-bypass-approvals-and-sandbox",
    "--ephemeral",
    "-",
  ],
  "env": {},
  "stdin": "/tmp/p.md",
}
`;

exports[`AC-3: pi adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "pi",
    "--print",
    "--model",
    "anthropic/claude-sonnet-4",
    "--no-session",
    "--no-approve",
  ],
  "env": {},
  "stdin": "/tmp/p.md",
}
`;

exports[`AC-4: OpenCode adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "opencode",
    "run",
    "--model",
    "deepseek/deepseek-v4-flash",
    "--auto",
    "--file",
    "/tmp/p.md",
    "Follow the instructions in the attached file.",
  ],
  "env": {},
  "stdin": null,
}
`;

exports[`AC-4: omp adapter matches its verified invocation > builds the documented invocation 1`] = `
{
  "argv": [
    "omp",
    "--print",
    "--model",
    "openai/gpt-5.2",
    "--no-session",
    "--auto-approve",
  ],
  "env": {},
  "stdin": "/tmp/p.md",
}
`;
